[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/blur.gdshader" type="Shader" id=2]
[ext_resource path="res://Assets/white.png" type="Texture" id=3]
[ext_resource path="res://UI/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Button/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/CustomModeMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/plains-bg.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.862745 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.533333, 0.533333, 0.533333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Blur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1.2 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="CustomModeMenu" type="CenterContainer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 112.0
margin_top = 50.0
margin_right = 912.0
margin_bottom = 550.0
rect_min_size = Vector2( 800, 500 )
rect_pivot_offset = Vector2( -974.735, -592.24 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background1" type="Sprite" parent="Panel"]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
position = Vector2( 400, 250 )
z_index = -2
texture = ExtResource( 7 )

[node name="Background2" type="Sprite" parent="Panel"]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
position = Vector2( 400, -350 )
z_index = -2
texture = ExtResource( 7 )
flip_v = true

[node name="Blur" type="TextureRect" parent="Panel"]
show_behind_parent = true
material = SubResource( 2 )
margin_left = -112.0
margin_top = -876.891
margin_right = 912.0
margin_bottom = 553.109
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel"]
margin_left = 135.0
margin_top = 45.0
margin_right = 658.0
margin_bottom = 373.0
all_tabs_in_front = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll Speed" type="VBoxContainer" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 69.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Initial" type="HBoxContainer" parent="Panel/TabContainer/Scroll Speed"]
margin_right = 473.0
margin_bottom = 22.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Scroll Speed/Initial"]
margin_right = 97.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Initial speed"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Scroll Speed/Initial"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 200.0

[node name="Max" type="HBoxContainer" parent="Panel/TabContainer/Scroll Speed"]
margin_top = 32.0
margin_right = 473.0
margin_bottom = 54.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Scroll Speed/Max"]
margin_right = 89.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Max speed"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Scroll Speed/Max"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 700.0

[node name="ChangeAmount" type="HBoxContainer" parent="Panel/TabContainer/Scroll Speed"]
margin_top = 64.0
margin_right = 473.0
margin_bottom = 86.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Scroll Speed/ChangeAmount"]
margin_right = 128.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Change amount"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Scroll Speed/ChangeAmount"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 400.0
step = 40.0
value = 80.0

[node name="TimeBetweenChanges" type="HBoxContainer" parent="Panel/TabContainer/Scroll Speed"]
margin_top = 96.0
margin_right = 473.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( -404.364, 22 )
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Scroll Speed/TimeBetweenChanges"]
margin_right = 189.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Time between changes"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Scroll Speed/TimeBetweenChanges"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 5.0
max_value = 50.0
step = 5.0
value = 20.0

[node name="TimeChangeIncrement" type="HBoxContainer" parent="Panel/TabContainer/Scroll Speed"]
margin_top = 128.0
margin_right = 473.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( -404.364, 22 )
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Scroll Speed/TimeChangeIncrement"]
margin_right = 189.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Time change increment"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Scroll Speed/TimeChangeIncrement"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 12.0
value = 3.0

[node name="Player" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 69.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitialSpeed" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_right = 473.0
margin_bottom = 22.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/InitialSpeed"]
margin_right = 97.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Initial speed"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Player/InitialSpeed"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 10000.0
max_value = 100000.0
step = 10000.0
value = 40000.0

[node name="MaxSpeed" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 32.0
margin_right = 473.0
margin_bottom = 54.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/MaxSpeed"]
margin_right = 89.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Max speed"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Player/MaxSpeed"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 10000.0
max_value = 100000.0
step = 10000.0
value = 60000.0

[node name="SpeedIncreaseRate" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 64.0
margin_right = 473.0
margin_bottom = 86.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/SpeedIncreaseRate"]
margin_right = 167.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Speed increase Rate"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Player/SpeedIncreaseRate"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.1

[node name="JumpPower" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 96.0
margin_right = 473.0
margin_bottom = 118.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/JumpPower"]
margin_right = 99.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Jump power"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Player/JumpPower"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 10000.0
max_value = 100000.0
step = 10000.0
value = 40000.0

[node name="Weight" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 128.0
margin_right = 473.0
margin_bottom = 150.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/Weight"]
margin_right = 56.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 5
text = "Weight"

[node name="Slider" type="HSlider" parent="Panel/TabContainer/Player/Weight"]
margin_left = 363.0
margin_right = 473.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 1000.0
max_value = 10000.0
step = 1000.0
value = 5000.0

[node name="InitialLives" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 160.0
margin_right = 473.0
margin_bottom = 192.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/InitialLives"]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 27.0
size_flags_horizontal = 0
text = "Initial lives"

[node name="SpinBox" type="SpinBox" parent="Panel/TabContainer/Player/InitialLives"]
margin_left = 403.0
margin_right = 473.0
margin_bottom = 32.0
size_flags_horizontal = 10
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="MaxLives" type="HBoxContainer" parent="Panel/TabContainer/Player"]
margin_top = 202.0
margin_right = 473.0
margin_bottom = 234.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Player/MaxLives"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 27.0
size_flags_horizontal = 0
text = "Max lives"

[node name="SpinBox" type="SpinBox" parent="Panel/TabContainer/Player/MaxLives"]
margin_left = 403.0
margin_right = 473.0
margin_bottom = 32.0
size_flags_horizontal = 10
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel"]
margin_left = 22.1224
margin_top = 390.633
margin_right = 781.122
margin_bottom = 459.633
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Panel/ButtonsContainer" instance=ExtResource( 5 )]
margin_left = 264.0
margin_top = 0.0
margin_right = 377.0
margin_bottom = 69.0
rect_min_size = Vector2( 113, 69 )
size_flags_horizontal = 0
text = "Play"

[node name="CancelButton" parent="Panel/ButtonsContainer" instance=ExtResource( 5 )]
margin_left = 381.0
margin_top = 0.0
margin_right = 494.0
margin_bottom = 69.0
rect_min_size = Vector2( 113, 69 )
size_flags_horizontal = 0
text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "in"
anims/in = SubResource( 4 )
anims/out = SubResource( 5 )

[node name="Fade" parent="." instance=ExtResource( 1 )]
